# pandas-eda-utils

./: README.md  pyproject.toml
app/: __init__.py
app/snippets/: eda.py  modify.py  read_csv.py  styling.py
