[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ryan Partridge <rpartridge101@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pydantic = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
